# MIC

./: .gitignore  analysis.py  extract_images.py  main.py  prepare_data.sh  pyproject.toml
assign_4/: main.py  q1.py  q2.py  q3.py  q4.py  requirements.txt  temp.py
assign_4/assign4_data/: robustShapeMean2D.mat
assign_4/q1_results/: eigenvalues.txt
assign_4/q2_results/: eigenvalues.txt
assign_4/q3_results/: robust_mean_results.txt
assign_4/q4_results/: eigenvalues.txt
assign_4/utils/: io_utils.py  kernel_pca.py  robust_shape.py  shape_utils.py  visualization.py
classical_techniques/: bayesian_denoising.py  bilateral_filtering.py  external_dictionary_learning.py  fourier_filtering.py  gaussian_filtering.py  internal_dictionary_learning.py  mean_filtering.py  median_filtering.py  spatially_adaptive_mrf_denoiser.py  wavelet_filtering.py
course-project/classical_techniques/: mean_filtering.py
course-project/utils/: base_denoiser.py
deep_learning_techniques/: cgan.py
utils/: add_noise.py  metrics.py
